# pitui

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  最终设计方案.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/pitui-config/: Cargo.toml
crates/pitui-config/src/: hotkeys.rs  lib.rs  tests.rs
crates/pitui-core/: Cargo.toml
crates/pitui-core/src/: diff.rs  lib.rs  model.rs
crates/pitui-data/: Cargo.toml
crates/pitui-data/src/: context.rs  dataset.rs  identity.rs  lib.rs  metadata.rs  operation.rs  render.rs  template.rs
crates/pitui-ecs/: Cargo.toml
crates/pitui-ecs/src/: binding_reconcile.rs  collection.rs  git_runtime.rs  lib.rs  operation_runtime.rs  projection.rs  tests.rs
crates/pitui-ecs/src/git_runtime/: logging.rs  snapshot.rs
crates/pitui-ecs/src/operation/: executor.rs  manager.rs  mod.rs  resolver.rs  systems.rs
crates/pitui-ecs/src/operation/systems/: changes.rs  copy.rs  reset.rs  viewport.rs
crates/pitui-ecs/tests/: operations.rs  projection.rs  read_vertical.rs
crates/pitui-git/: Cargo.toml
crates/pitui-git/src/: lib.rs  logging.rs  parser.rs
crates/pitui-git/tests/: read_executor.rs  write_executor.rs
crates/pitui-next/: Cargo.toml
crates/pitui-next/src/: lib.rs  main.rs  tests.rs
crates/pitui-tui/: Cargo.toml
crates/pitui-tui/src/: input.rs  input_listener.rs  lib.rs  render.rs  terminal.rs
docs/: README.md  acceptance-report.md  code-assets.md  config.example.toml  git-tui-design.md  global-configuration-design.md  hotkeys.md  implementation-status.md  model-driven-architecture.md  next-development-status.md  view-configuration-design.md
docs/legacy/: acceptance-report.md  git-tui-design.md  global-configuration-design.md  model-driven-architecture.md  view-configuration-design.md
src/: config.rs  lib.rs  main.rs  tests.rs
src/app/: action.rs  command.rs  controller.rs  focus.rs  mod.rs  model.rs  requirement.rs  state.rs  view.rs
src/domain/: mod.rs  model.rs
src/git/: logging.rs  mod.rs  parser.rs  protocol.rs  runner.rs  worker.rs
src/tui/: input.rs  mod.rs  render.rs
tests/: config_cli.rs  git_integration.rs
