[package]
name = "pitui"
version = "0.1.0"
edition = "2024"
description = "A safe, focused, multi-repository Git TUI"
readme = "README.md"
license = "MIT"
keywords = ["git", "tui", "terminal", "reflog", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = [
    ".",
    "crates/pitui-core",
    "crates/pitui-data",
    "crates/pitui-ecs",
    "crates/pitui-git",
    "crates/pitui-config",
    "crates/pitui-tui",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
bevy_ecs = { version = "0.19.0", default-features = false, features = ["std"] }
crossterm = "0.29.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }
pitui-core = { path = "crates/pitui-core" }
pitui-data = { path = "crates/pitui-data" }
pitui-ecs = { path = "crates/pitui-ecs" }
pitui-git = { path = "crates/pitui-git" }
pitui-config = { path = "crates/pitui-config" }
pitui-tui = { path = "crates/pitui-tui" }
tempfile = "3.27.0"
unicode-width = "0.2.2"

[dependencies]
bevy_ecs.workspace = true
pitui-config.workspace = true
pitui-data.workspace = true
pitui-ecs.workspace = true
pitui-git.workspace = true
pitui-tui.workspace = true

[dev-dependencies]
pitui-core.workspace = true
tempfile.workspace = true
