[package]
name = "pitui-next"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Next-generation Data Driven Pitui composition root"
publish = false

[dependencies]
bevy_ecs.workspace = true
pitui-config.workspace = true
pitui-data.workspace = true
pitui-ecs.workspace = true
pitui-git.workspace = true
pitui-tui.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "pitui-next"
path = "src/main.rs"
